--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularTourOfHeroes</title>
+  <title>My Hero Academia</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <my-app>
+  	<!-- Application Content -->
+  </my-app>
 </body>
 </html>
